--- a/source/posts/2012-06-21.md
+++ b/source/posts/2012-06-21.md
@@ -10,49 +10,49 @@
  * Из предыдущего следует **поддержка многопроцессорных телефонов**, наконец-то.
  * **Поддержка новых разрешений экрана** (1280x768 и 1280x720). Последнее, как вы понимаете, называется 720p и кагбе намекает нам на телевизоры. Или у меня паранойя.
  * Новинка! **Поддержка MicroSD карт!** Впервые в мире телефоны научились поддерживать MicroSD!
- * **NFC шаринг**. Надо посмотреть, что именно будет реализовано. Есть миллионы способов использования NFC на расстоянии.
- * Например, **платежи через NFC**. Называться это будет Wallet, говорят, что будет возможность привязать свои кредитки к NFC и расплачиваться за покупки с помощью телефона. Красивая идея, только требует, чтобы во всех магазинах появились приемные устройства для NFC.
+ * **NFC-шаринг**. Надо посмотреть, что именно будет реализовано. Есть миллионы способов использования NFC на расстоянии.
+ * Например, **платежи через NFC**. Называться это будет Wallet; говорят, что будет возможность привязать свои кредитки к NFC и расплачиваться за покупки с помощью телефона. Красивая идея, только требует, чтобы во всех магазинах появились приёмные устройства для NFC.
  * **IE10**. Нам обещают еще один мобильный браузер, не на базе вебкита. А вообще было бы неплохо, "IE10! Новый, совершенно оригинальный браузер. Использует технологию Microsoft WebKit!". Эх.
- * **Карты от Nokia Maps из коробки** на всех устройствах. Теперь в этой гонке еще и майкрософт. Вот это способно подогреть рынок до предвзрывного состояния.
+ * **Карты Nokia Maps из коробки** на всех устройствах. Теперь в этой гонке еще и майкрософт. Вот это способно подогреть рынок до предвзрывного состояния.
 
-Но это, собственно, не конец анонса. Интересное в деталях.
+Но это, собственно, не конец анонса. Интересное - в деталях.
 
-Самый громкий анонс - **апгрейда с Windows Phone 7 на Windows Phone 8 не будет**. Никогда. Будет выпущена версия WP7.8, которая чем-то похожа на WP8, но все, кто купил недавно телефоны на WP7, могут сосать лапу. Для объяснения используется смешной аргумент: "WP8 это совершенно новая платформа, ей не подходит старое железо". Как будто это было не в руках разработчиков платформы.
+Самый громкий анонс - **апгрейда с Windows Phone 7 на Windows Phone 8 не будет**. Никогда. Будет выпущена версия WP7.8, которая чем-то похожа на WP8, но все, кто купил недавно телефоны на WP7, могут сосать лапу. Для объяснения используется смешной аргумент: "WP8 - это совершенно новая платформа, ей не подходит старое железо". Как будто это было не в руках разработчиков платформы.
 
-**100k приложений в Маркетплейс**. И гордое заявление «мы растем быстрее Андроида»! Это наверное даже правда. 200 новых программ каждый день - хороший темп, только сравниваться надо с АппСтором в первый год его существования, например. Интересно, также, что приложения для WP7 не будут из коробки работать на WP8, минимум перекомпиляция, а судя последующему абзацу - частичное переписывание.
+**100k приложений в Маркетплейс**. И гордое заявление «мы растём быстрее Андроида»! Это, наверное, даже правда. 200 новых программ каждый день - хороший темп, только сравниваться надо с АппСтором в первый год его существования, например. Интересно также, что приложения для WP7 не будут из коробки работать на WP8, минимум - перекомпиляция, а, судя  по следующему абзацу, - частичное переписывание.
 
-Потому что были заявлены еще и массовые изменения в процессах разработки.
+Потому что были заявлены еще и массовые изменения в процессах разработки:
 
- * **Поддержка нативных приложений**, на C и C++. Если вы не в курсе, приложения для WP7 пишутся на C#, до нативного уровня пускали только особые, избранные приложения. Так же интересна оброненная фраза об использовании Direct X API в мобильных приложениях.
- * **Платежи из приложения** или «In-app payments». Для платформы Windows Phone это новинка, которая есть уже во всех остальных платформах. Интересно, а как зарабатывали все те 100к приложений в маркетплейсе?
- * **Встраивание VoIP приложений** в общую инфраструктуру звонков. Это богатая идея, особенно важная для корпоративной среды. Возможность написать SIP звонилку, которая встроена в штатную - это будет приятно.
+ * **Поддержка нативных приложений** на C и C++. Если вы не в курсе, приложения для WP7 пишутся на C#, до нативного уровня пускали только особые, избранные приложения. Так же интересна оброненная фраза об использовании Direct X API в мобильных приложениях.
+ * **Платежи из приложения** или «In-app payments». Для платформы Windows Phone это - новинка, которая есть уже во всех остальных платформах. Интересно, а как зарабатывали все те 100K приложений в маркетплейсе?
+ * **Встраивание VoIP-приложений** в общую инфраструктуру звонков. Это богатая идея, особенно важная для корпоративной среды. Возможность написать SIP-звонилку, которая встроена в штатную - это будет приятно.
 
-Повторюсь, кажется, многим разработчикам придется переписать довольно много всего. А если учесть, что SDK от WP8 еще не выложили - времени им дадут не много.
+Повторюсь, кажется, многим разработчикам придется переписать довольно много всего. А если учесть, что SDK от WP8 еще не выложили - времени им дадут немного.
 
 ![center](https://img.skitch.com/20120621-ksb6wm57963wxk9i36a58s6mik.png)
 
-Куча всего сделана для корпоративной среды. **Криптование всего** на устройстве, **удаленное управление**, как в других корпоративных телефонах, ну и «Company Hub», набор приложений, которые могут ставить себе сотрудники.
+Куча всего сделана для корпоративной среды. **Криптование всего** на устройстве, **удалённое управление**, как в других корпоративных телефонах, ну и «Company Hub», набор приложений, которые могут ставить себе сотрудники.
 
-И последняя, важная фишка, которой нет в iOS (потому что не жмёт) и в Android (не знаю почему). Телефоны на базе WP8 будут раздаваться как обычно, через вендоров. Но текущие WP7 нельзя самовольно обновить с WP7.5 на WP7.8, только получив апдейт от вендора. Поэтому в WP8 введен **режим апдейта для гиков**, когда вы отказываетесь от претензий к оператору и устанавливаете обновление напрямую с сайта майкрософт. И это будет легально. Почему так не сделают с Андроидом, я не понимаю.
+И последняя, важная фишка, которой нет в iOS (потому что не жмёт) и в Android (не знаю почему). Телефоны на базе WP8 будут раздаваться как обычно, через вендоров. Но текущие WP7 нельзя самовольно обновить с WP7.5 на WP7.8, только получив апдейт от вендора. Поэтому в WP8 введен **режим апдейта для гиков**, когда вы отказываетесь от претензий к вендору и устанавливаете обновление напрямую с сайта майкрософт. И это будет легально. Почему так не сделают с Андроидом, я не понимаю.
 
 Вот такие дела. Да, два обзора чего-то про Microsoft подряд. Но ничего уж не поделаешь, массированная атака PR.
 
 -----
 
 ## Для всех
-* [Steam для школ - бесплатная версия Steam для обучения детей на базе игры Portal 2](http://i.joystiq.com/2012/06/20/steam-for-schools-is-a-free-version-of-steam-for-students-fac/). Это одна из самых крутых идей, которые я видел за последнее время. Наверное на одном уровне с идеей «обучать детей через майнкрафт» #portal #steam #edu
+* [Steam для школ - бесплатная версия Steam для обучения детей на базе игры Portal 2](http://i.joystiq.com/2012/06/20/steam-for-schools-is-a-free-version-of-steam-for-students-fac/). Это одна из самых крутых идей, которые я видел за последнее время. Наверное, на одном уровне с идеей «обучать детей через майнкрафт» #portal #steam #edu
 * [Совсем не для гиков - управление проектами через GitHub](http://www.lullabot.com/articles/managing-projects-with-github). Я так делаю с аутсорсерами уже очень давно. Не хватает, пожалуй, только гантта, но обычно в этом и нет необходимости #github #pm
 * [Фейсбук тестирует интересную функцию](http://thenextweb.com/socialmedia/2012/06/20/facebook-starts-to-let-you-know-how-many-friends-logged-in-recently-and-the-last-time-youve-posted/) - показывает, сколько твоих френдов недавно логинились. Боюсь представить, как именно это влияет на количество апдейтов статусов. #facebook
-* [Мозилла рассказывает как правильно обресетить аккаунт](http://blog.mozilla.org/theden/2012/06/13/resetfirefox/) чтобы ничего не тормозило. Как-то неправильно писать такие посты, вам не кажется? Уж разработчики-то точно должны делать всё, чтобы ничего сбрасывать не надо было.
+* [Мозилла рассказывает, как правильно обресетить аккаунт](http://blog.mozilla.org/theden/2012/06/13/resetfirefox/) чтобы ничего не тормозило. Как-то неправильно писать такие посты, вам не кажется? Уж разработчики-то точно должны делать всё, чтобы ничего сбрасывать не надо было.
 * [Амазоновская борьба за API обостряется](http://gigaom.com/cloud/the-amazon-api-battle-for-the-cloud-rages-on/), пишет GigaOm. Что-то я в последнее время начал уважать это издание за то, насколько глубоко они копают. Действительно, на фронте API для облаков сейчас очень остро. #amazon #api
-* [«Бывший гуглер»™ запустил Avocado, веб и мобильное приложение для парочек](http://thenextweb.com/apps/2012/06/20/ex-googlers-launch-avocado-web-and-mobile-apps-for-couples-to-rival-pear-sorry-pair/). Такая, типичная микросоциальная сеть. Жду, пока кто-нибудь выпустит приложение для соц.сети на одного человека, а потом и вовсе без людей. #social #avocado
+* [«Бывший гуглер»™ запустил Avocado, веб- и мобильное приложение для парочек](http://thenextweb.com/apps/2012/06/20/ex-googlers-launch-avocado-web-and-mobile-apps-for-couples-to-rival-pear-sorry-pair/). Такая типичная микросоциальная сеть. Жду, пока кто-нибудь выпустит приложение для соцсети на одного человека, а потом и вовсе без людей. #social #avocado
 * [Как «дополненная реальность» изменяет мир ритейла](http://mashable.com/2012/06/20/augmented-reality-retail/). Из статьи я так и не понял, как же именно меняет. Как *может* когда-нибудь изменить - да. #AR
 * [Zapier: как IFTTT, но для бизнесов](http://techcrunch.com/2012/06/20/zapier-ifttt-for-business/). Помогает реализовать простую логику вроде «если человек заплатил через paypal - вышли ему смс с номером, который возьми вон там». Удобно. Кстати, [IFTTT](http://ifttt.com) тоже обновился, сходите, гляньте.
 
 ## На грани
 * [Как правильно отскейлить приложение, активно отсылающее почту](http://highscalability.com/blog/2012/6/20/idonethis-scaling-an-email-based-app-from-scratch.html). Хороший рассказ о том, как работает проект iDoneThis. *Кстати, никто не хочет сделать лист рассылки для этого бложека? Ну, там формочку «оставьте свой емейл», раз в день приходит письмо и кто угодно может про него пофлеймить в общем листе рассылки. М?* #mail #scale
 * [В Firefox новый, очень удобный инструмент разработчика - командная строка](http://incompleteness.me/blog/2012/06/18/firefox-command-line/). Я попробовал. Правда удобно. Если у вас, как у меня, найтли - поставьте `devtools.toolbar.enable = true` в about:config. #firefox #dev
-* [Amazon приехал в Австралию!](http://aws.typepad.com/aws/2012/06/cloudfront-route-53-edge-location-in-sydney-australia.html), ну по крайней мере S3, CloudFront и Route53 теперь имеют приземление в Сиднее. Они, кстати, там нанимают. Австралийцы, к вам всё еще без судимости не пускают? #amazon #dev
+* [Amazon приехал в Австралию!](http://aws.typepad.com/aws/2012/06/cloudfront-route-53-edge-location-in-sydney-australia.html), ну, по крайней мере, S3, CloudFront и Route53 теперь имеют приземление в Сиднее. Они, кстати, там нанимают. Австралийцы, к вам всё еще без судимости не пускают? #amazon #dev
 * [Фанаты PHP, ликуйте! Я нашел хороший туториал по совершенно неизвестному мне фреймворку Laravel](http://net.tutsplus.com/tutorials/php/building-web-applications-from-scratch-with-laravel/). Удивительно, но это первый PHP-фреймворк, который не вызывает у меня явного отвращения. Но всё равно, положил статью в раздел «на грани», потому что PHP. #php #laravel #tutorial
 
 
@@ -63,7 +63,7 @@
 * [JWZ портировал XScreenSaver на iOS](http://www.jwz.org/blog/2012/06/i-have-ported-xscreensaver-to-the-iphone/). Но интересно не это, а то, как он изощренно ругается на дебилов, изобретших OpenGL ES 1.1. Действительно не понятно, что мешало людям написать тонюсенький слой совместимости с OpenGL 1.x. #opengl #jwz #flame
 
 ## Пользовательское
-* [Единый способ настроки форматирования кода для разных текстовых редакторов](http://editorconfig.org/) Cписок поддерживаемых пока не большой, только самые популярные Emacs, Vim, Sublime Text 2 , Code::Blocks и еще несколько. Сейчас проект позволяет настроит отступы, пробелы/табуляцию и концы строк. (от [@hostmaster](http://github.com/hostmaster) ) #editor #code
+* [Единый способ настроки форматирования кода для разных текстовых редакторов](http://editorconfig.org/) Cписок поддерживаемых пока небольшой, только самые популярные Emacs, Vim, Sublime Text 2, Code::Blocks и ещё несколько. Сейчас проект позволяет настроить отступы, пробелы/табуляцию и концы строк. (от [@hostmaster](http://github.com/hostmaster) ) #editor #code
 
 Три ссылки от [@amogil](http://github.com/amogil)
 
@@ -72,6 +72,6 @@
 * [20 новых доменов верхнего уровня, которые должны существовать, но никогда не будут](http://www.wired.com/threatlevel/2012/06/domain-names-that-should-exist/)
 
 ## Видео
-* [Хороший и короткий ролик об Алане Тьюринге](http://www.bbc.co.uk/news/technology-18528074) и о том, как он помог во второй мировой. #turing #video
+* [Хороший и короткий ролик об Алане Тьюринге](http://www.bbc.co.uk/news/technology-18528074) и о том, как он помог во Второй мировой. #turing #video
 
-*Насчет листа рассылки я серьезно. Подумайте кто-нибудь, если не лень*
+*Насчёт листа рассылки я серьёзно. Подумайте кто-нибудь, если не лень*
