Fixed type настроки -> настройки

--- a/source/posts/2012-06-21.md
+++ b/source/posts/2012-06-21.md
@@ -63,7 +63,7 @@
 * [JWZ портировал XScreenSaver на iOS](http://www.jwz.org/blog/2012/06/i-have-ported-xscreensaver-to-the-iphone/). Но интересно не это, а то, как он изощренно ругается на дебилов, изобретших OpenGL ES 1.1. Действительно не понятно, что мешало людям написать тонюсенький слой совместимости с OpenGL 1.x. #opengl #jwz #flame
 
 ## Пользовательское
-* [Единый способ настроки форматирования кода для разных текстовых редакторов](http://editorconfig.org/) Cписок поддерживаемых пока не большой, только самые популярные Emacs, Vim, Sublime Text 2 , Code::Blocks и еще несколько. Сейчас проект позволяет настроит отступы, пробелы/табуляцию и концы строк. (от [@hostmaster](http://github.com/hostmaster) ) #editor #code
+* [Единый способ настройки форматирования кода для разных текстовых редакторов](http://editorconfig.org/) Cписок поддерживаемых пока не большой, только самые популярные Emacs, Vim, Sublime Text 2 , Code::Blocks и еще несколько. Сейчас проект позволяет настроит отступы, пробелы/табуляцию и концы строк. (от [@hostmaster](http://github.com/hostmaster) ) #editor #code
 
 Три ссылки от [@amogil](http://github.com/amogil)
 
