--- a/source/drafts/amogil-2012-06-22.md
+++ b/source/drafts/amogil-2012-06-22.md
@@ -1,4 +1,6 @@
 Американским ученым удалось сохранить состояние кубита в кристалле алмаза при комнатной температуре дольше, чем на одну секунду. А значит революция в мире криптографии стала еще ближе. Прорыв в том, что защищенность данных будет обеспечиваться не вычислительной сложностью алгоритмов, а законами физики.
 http://www.mpg.de/5856755/quantum_storage_memory
 
+Гугл запустил проект для поддержки исчезающих языков. По данным Юнеско половина из ныне существующих 6000 языков находятся под угрозой исчезновения.
+http://arstechnica.com/science/2012/06/google-launches-endangered-language-project/
 
