--- a/source/posts/2012-06-22.md
+++ b/source/posts/2012-06-22.md
@@ -22,3 +22,4 @@
 * [Опубликованы результаты опроса](http://www.zdnet.com/blog/btl/the-future-of-cloud-computing-9-trends-for-2012/80511) сотрудников 39-и крупнейших IT-компаний на тему драйверов роста и рисков облачных вычислений. Главные драйверы - масштабируемость и гибкость, главная страшилка - безопасность. Ничего кардинально нового, но интересно. (via [@amogil](http://github.com/amogil))
 * Осталось всего [три недели до начала очередного ICFP Programming Contest 2012](http://icfpcontest2012.wordpress.com/). Участвуй! Будь гиком, бл#$ть! (via [@amogil](http://github.com/amogil))
 * [Американским ученым удалось сохранить состояние кубита в кристалле алмаза](http://www.mpg.de/5856755/quantum_storage_memory) при комнатной температуре дольше, чем на одну секунду. Революция в мире криптографии стала еще ближе. Прорыв в том, что защищенность данных будет обеспечиваться не вычислительной сложностью алгоритмов, а законами физики. (via [@amogil](http://github.com/amogil))
+* [Одномерная игрушка](http://azurenimbus.com/linescape), вдруг кто еще не видел. Оказывается, Flash еще жив!
