--- a/source/posts/2012-06-22.md
+++ b/source/posts/2012-06-22.md
@@ -12,7 +12,7 @@
 * [Flipboard для Android вышел](https://play.google.com/store/apps/details?id=flipboard.app). Обычный флипборд, чего ж они его так долго делали? #flipboard #android
 * [G2 - набор bash-скриптов и алиасов, сильно упрощающий жизнь людям, не понимающим в git-е](https://github.com/orefalo/g2). Мне не понравилось, но, например, [@bormotov](http://twitter.com/bormotov) полюбил. #bash #git
 * [WooGa рассказали как делали Pocket Island](http://www.wooga.com/2012/06/woogas-html5-adventure/), с какими проблемами столкнулись и насколько вообще HTML5 готов к реальным играм, а не к прототипам. Судя по их рассказу - нет, пока не очень готов, очень уж фигурно грабли разложены. #html #games #wooga
-* [Какая мобильная OS приносит больше всего денег?](gigaom.com/mobile/which-mobile-oss-apps-make-most-money-surprise-its-blackberry/). Спойлеры: это Блекберри, можете не ходить. #bb #mobile
+* [Какая мобильная OS приносит больше всего денег?](http://gigaom.com/mobile/which-mobile-oss-apps-make-most-money-surprise-its-blackberry/). Спойлеры: это Блекберри, можете не ходить. #bb #mobile
 * [В викимедии теперь есть визуальный редактор](http://blog.wikimedia.org/2012/06/21/help-us-shape-wikimedias-prototype-visual-editor/). Ну правильно, есть много людей, которые не в состоянии пользоваться вики-разметкой. Теперь эти интеллектуалы будут статьи в википедии писать! #wiki
 * [FireBase подняли $1.1M денег и отчитываются о процессе](http://blog.firebase.com/post/25613623705/fundraising-post-mortem). Стартаперам на заметку, особенно пункты 2 и 3. #startup
 * [Гуглеры утверждают, что с G+ всё хорошо, он ещё просто не вышел на фазу гиперроста](http://www.v3.co.uk/v3-uk/news/2185471/google-claims-google-service-reach-hypergrowth-stage). А вот как выйдет - он еще всем покаааажет! #gplus #fun
