--- a/source/posts/2012-06-19.md
+++ b/source/posts/2012-06-19.md
@@ -27,7 +27,7 @@
 
 Подробнее со всем этим счастьем вы можете познакомиться [на сайте производителя](http://www.microsoft.com/surface/en/us/default.aspx), если вам повезёт. Мне не повезло - сайт производителя на момент написания этой статьи выдавал 500-ю ошибку. А остальное лучше читать [в спецобзоре на Engadget](http://www.engadget.com/2012/06/18/hands-on-with-microsoft-surface-for-windows-rt/). Есть ещё [смешной промо-ролик от Майкрософт](http://www.youtube.com/watch?v=dpzu3HM2CIo) с модной музыкой и графикой.
 
-Мне кажется, что устройство получилось интересным. Только вторичным. Все ждали от Microsoft чего-то большего. А тут - ну нам показали планшет, работающий под Windows (как планшеты вообще, так и устройства с Windows на борту мы уже видели). Цены не объявили, сказав только, что они будут "сопоставимы с остальными". Дату выхода не объявили вовсе, привязали всё к анонсу Windows 8. Я разочарован. Посмотрим на этот гаджет ещё вживую, возможно, моё мнение изменится. Но пока - это банальный ультрабук с гибкой клавиатурой, по, я почему-то уверен, заоблачным ценам. В чём прикол? Может, я что-то не заметил?
+Мне кажется, что устройство получилось интересным. Только вторичным. Все ждали от Microsoft чего-то большего. А тут - ну нам показали планшет, работающий под Windows (как планшеты вообще, так и устройства с Windows на борту мы уже видели). Цены не объявили, сказав только, что они будут "сопоставимы с остальными". Дату выхода не объявили вовсе, привязали всё к анонсу Windows 8. Я разочарован. Посмотрим на этот гаджет ещё вживую, возможно, моё мнение изменится. Но пока - это банальный ультрабук с гибкой клавиатурой, но, я почему-то уверен, заоблачным ценам. В чём прикол? Может, я что-то не заметил?
 
 -----
 
