--- a/source/posts/2012-06-26.md
+++ b/source/posts/2012-06-26.md
@@ -23,7 +23,7 @@
 * [LATimes: Facebook поменял видимые всем email на адреса @facebook.com](http://www.latimes.com/business/technology/la-fi-tn-facebook-changes-emails-20120625,0,1918913.story)
 * [Chicago Tribune: Facebook поменял все видимые email на адреса @facebook.com](http://www.chicagotribune.com/business/technology/la-fi-tn-facebook-changes-emails-20120625,0,2962878.story)
 
-И только потом к этому делу [подключились всякие теккранчи](http://techcrunch.com/2012/06/25/facebook-email-address/). О чем это говорит? Не знаю, решайте сами. Вот вам пока [более короткий совет от LifeHacker, как это дело сменить](lifehacker.com/5921095/facebook-just-changed-your-email-without-permission-heres-how-to-get-it-back).
+И только потом к этому делу [подключились всякие теккранчи](http://techcrunch.com/2012/06/25/facebook-email-address/). О чем это говорит? Не знаю, решайте сами. Вот вам пока [более короткий совет от LifeHacker, как это дело сменить](http://lifehacker.com/5921095/facebook-just-changed-your-email-without-permission-heres-how-to-get-it-back).
 
 -----
 
