одну запятую пропустил

--- a/source/posts/2012-06-26.md
+++ b/source/posts/2012-06-26.md
@@ -44,7 +44,7 @@
 * [Light Table Playground](http://www.chris-granger.com/2012/06/24/its-playtime/) - первые альфа-альфы версии-версии той самой IDE Light Table. Пока только для Clojure, но уже понятна идея, лежащая в основе. #ide #clojure #lighttable
 * [Node.js 0.8 вышел](http://blog.nodejs.org/2012/06/25/node-v0-8-0/). Из ценного, кмк, [модуль `domain`](http://nodejs.org/api/domain.html). #javascript #node
 * [Ух! В Java8 будут анонимные функции](http://datumedge.blogspot.co.uk/2012/06/java-8-lambdas.html) и много всякого прочего. Интересно, а синтаксис они как-то обсуждают? Или из головы выдумывают? #java #lambda
-* [Отличная сравнительная статья по сравнению производительности разных классификаторов](http://blog.explainmydata.com/2012/06/ntrain-24853-ntest-25147-ncorrupt.html) на небольших объемах данных. Я почти везде использую линейный SVM, оказывается я дурак и он слишком медленный на обучении. #svm
+* [Отличная сравнительная статья по сравнению производительности разных классификаторов](http://blog.explainmydata.com/2012/06/ntrain-24853-ntest-25147-ncorrupt.html) на небольших объемах данных. Я почти везде использую линейный SVM, оказывается, я дурак и он слишком медленный на обучении. #svm
 
 ## От читателей
 
