--- a/source/posts/2012-06-26.md
+++ b/source/posts/2012-06-26.md
@@ -59,4 +59,8 @@
 
 * [Инженер из Apple собрал из 1500 деталей конструктора Lego Technics "Антикитерский механизм" ](http://news.cnet.com/8301-17852_3-20025264-71.html). Antikythera Mechanism это античный прибор для вычисления положение Солнца и Луны и других астрономических данных знаков Зодиака. Я не вижу в этом ничего выдающегося, однако видео интересное и очень познавательная статья про [оригинальный механизм](http://ru.wikipedia.org/wiki/Антикитерский_механизм)
 
+И от [@9seconds](https://twitter.com/9seconds)
+
+* Искусственный интеллект от Google [оказался](http://gizmodo.com/5921296/googles-artificial-brain-loves-to-watch-cat-videos) любителем посмотреть видео с котиками. Судный день отладывается, все любят котиков.
+
 *Некоторые из вас получили права на коммит в репозиторий. Постарайтесь ничего не сломать, впрочем, я в вас верю.*
