--- a/source/drafts/amogil-2012-06-27.md
+++ b/source/drafts/amogil-2012-06-27.md
@@ -1,2 +1,2 @@
-Весной Питер Тиль прочитал в Стэнфорде курс лекций про технологическое предпринимательство и выложил их текст в виде набора эссэ.
+Весной Питер Тиль прочитал в Стэнфорде курс лекций про технологическое предпринимательство. А сейчас выложил их текст в виде набора эссэ.
 http://blakemasters.tumblr.com/peter-thiels-cs183-startup
