--- a/source/posts/2012-06-27.md
+++ b/source/posts/2012-06-27.md
@@ -52,4 +52,4 @@
 * [Bridge - новый модульный RPC фреймворк](https://www.getbridge.com/) с поддержкой самых разных языков. Примеры на js, python, ruby, java. Выглядит очень интересно, но есть подвох. Бесплатная версия залочена на 40 тыс. сообщений в минуту. Если хочешь больше - плати. #rpc #bridge
 * [Ответ фанатов MySQL на нападки MemSQL](http://dom.as/2012/06/26/memsql-rage/). Даже заголовок отличный - "MySQL в бульбулион раз быстрее чем MemSQL". Что я могу сказать. Ну, делайте скидку на литовца. А вот, что по поводу этой же ссылки написал [@hostmaster](http://github.com/hostmaster): "Известный в MySQL сообществе инженер из facebook Domas Mituzas написал в своем блоге пост о том, что MySQL в стопятсот тысяч раз быстрее чем MemSQL. Вообщем моё кунг-фу сильнее твоего кунг-фу". #mysql #memsql #flame
 * [Аккуратная библиотечка-расширение для jQuery](http://warpech.github.com/jquery-handsontable/index.html) позволяет встраивать таблицы, которые ведут себя как Excel. Т.е. можно менять там данные, он всё это пересчитывает и тп. Формул, правда, пока нет, но их легко писать на javascript. #jquery #excel #javascript #html
-* Аарон Шварц, автор фреймворка web.py (и много чего еще), опубликовал ещё одно руководство по разработке ПО. Все хорошие, по его мнению, идеи он собрал в одном лаконичном документе и назвал его [The Pokayoke Guide to Developing Software](http://pokayokeguide.com/). Pokayoke — это по-японски, что по-нашему будет "fail-safing" или "mistake-proofing". [via @mikola](http://github.com/micola)
+* Аарон Шварц, автор фреймворка web.py (и много чего еще), опубликовал ещё одно руководство по разработке ПО. Все хорошие, по его мнению, идеи он собрал в одном лаконичном документе и назвал его [The Pokayoke Guide to Developing Software](http://pokayokeguide.com/). Pokayoke — это по-японски, что по-нашему будет "fail-safing" или "mistake-proofing". [via @mikola](http://github.com/mikola)
