--- a/source/posts/2012-06-27.md
+++ b/source/posts/2012-06-27.md
@@ -6,15 +6,15 @@
 
 ![center](http://www.insidefacebook.com/wp-content/uploads/2012/06/Screen-Shot-2012-06-22-at-8.54.50-AM.png)
 
-Собственно, вот так это выглядело. На сайте игровой компании-партнера Zynga появился блок Facebook Sponsored Links. Об этом [тут же написал InsideFacebook](http://www.insidefacebook.com/2012/06/22/first-hints-of-a-facebook-ad-network-sponsored-stories-appear-on-zynga-com/), а потом растащили другие новостные сайты.
+Собственно, вот так это выглядело. На сайте игровой компании-партнёра Zynga появился блок "Facebook Sponsored Links". Об этом [тут же написал InsideFacebook](http://www.insidefacebook.com/2012/06/22/first-hints-of-a-facebook-ad-network-sponsored-stories-appear-on-zynga-com/), а потом растащили другие новостные сайты.
 
-Для меня это очень сильный знак. Я годами не понимал, как именно собираются зарабатывать социальные сети. Очевидно же, что жить за счет рекламы внутри самой соцсети сложно - люди приходят туда развлекаться и общаться, а не ходить по непонятным ссылкам. И моё мнение легко подтверждается цифрами рекламных компаний в фейсбуке. И вот, карты начали открываться. Размещение рекламы фейсбука на внешних сайтах - это очень сильный шаг, позволяющий на порядок (как мне кажется) повысить отдачу от рекламы. При этом, в отличие от других рекламных сетей, фейсбук знает про вас всё и может таргетировать рекламу на порядок точнее. А значит - зарабатывать больше, делиться бОльшим заработком с площадкой для размещения.
+Для меня это очень сильный знак. Я годами не понимал, как именно собираются зарабатывать социальные сети. Очевидно же, что жить за счет рекламы внутри самой соцсети сложно - люди приходят туда развлекаться и общаться, а не ходить по непонятным ссылкам. И моё мнение легко подтверждается цифрами рекламных компаний в фейсбуке. И вот, карты начали открываться. Размещение рекламы фейсбука на внешних сайтах - это очень сильный шаг, позволяющий на порядок, как мне кажется, повысить отдачу от рекламы. При этом, в отличие от других рекламных сетей, фейсбук знает про вас всё и может таргетировать рекламу на порядок точнее. А значит - зарабатывать больше, делиться бОльшим заработком с площадкой для размещения.
 
-Да, сейчас это всего лишь сайт Zynga, с которым у фейсбука партнерские отношения, но это же только начало. Мне вот сейчас кажется, что VK легко последует примеру старшего брата. Раздав рекламу из VK наружу можно слегка взорвать рынок рекламы в Рунете. Люблю взрывы. Будем ждать.
+Да, сейчас это всего лишь сайт Zynga, с которым у фейсбука партнёрские отношения, но это же только начало. Мне вот сейчас кажется, что VK легко последует примеру старшего брата. Раздав рекламу из VK наружу, можно слегка взорвать рынок рекламы в Рунете. Люблю взрывы. Будем ждать.
 
 -----
 
-Ночью, а точнее вчера вечером, [зарелизился Firefox for Android](http://blog.mozilla.org/blog/2012/06/26/mozilla-launches-a-speedy-and-powerful-upgrade-to-mobile-browsing-with-firefox-for-android/). Новый, сочный, клевый, работающий быстрее родного браузера в 3.5 раз.
+Ночью, а точнее вчера вечером, [зарелизился Firefox for Android](http://blog.mozilla.org/blog/2012/06/26/mozilla-launches-a-speedy-and-powerful-upgrade-to-mobile-browsing-with-firefox-for-android/). Новый, сочный, клёвый, работающий быстрее родного браузера в 3,5 раза.
 
 ![center](http://chyo.ru/362466611613.png)
 
@@ -22,34 +22,34 @@
 
  * Это браузер на базе мозиллы, с полным рендерингом, так что это второй полноценный движок отрисовки для устройств на базе Android.
  * Если вы пользуетесь Фаерфоксом на десктопе - вы можете синхронизировать все данные через облако Mozilla Sync. Включая пароли, расширения, закладки и открытые табы.
- * Так же вы можете пользоваться всем этим и на iPhone, правда это работа в режиме "менеджера закладок", браузера для iOS всё еще нет.
+ * Также вы можете пользоваться всем этим и на iPhone, правда это работа в режиме "менеджера закладок", браузера для iOS всё еще нет.
  * Скорость рендеринга действительно потрясает, хотя иногда браузер внезапно задумывается на 1-2 секунды.
  * Полностью поддерживает Flash.
  * Обладает оригинальным, но очень приятным интерфейсом, понятным начинающему пользователю.
 
-На ArsTechnica [как всегда хороший обзор браузера](http://arstechnica.com/gadgets/2012/06/hands-on-firefox-for-android-may-become-your-favorite-android-browser/) со скриншотами. В общем это действительно круто, очень теплый прием нового браузера. Посмотрим еще, как отреагирует рынок настоящих пользователей и примут ли они его так же тепло. Прямо сейчас доля Firefox на мобильных очень близка к нулю. А продукт действительно хороший, как почти все новые продукты Mozilla, кроме Thunderbird.
+На ArsTechnica [как всегда хороший обзор браузера](http://arstechnica.com/gadgets/2012/06/hands-on-firefox-for-android-may-become-your-favorite-android-browser/) со скриншотами. В общем это действительно круто, очень тёплый прием нового браузера. Посмотрим ещё, как отреагирует рынок настоящих пользователей и примут ли они его так же тепло. Прямо сейчас доля Firefox на мобильных очень близка к нулю. А продукт действительно хороший, как почти все новые продукты Mozilla, кроме Thunderbird.
 
 -----
 
 ## Для всех
-* [Ретеншн рейт от аппстора всё еще больше, чем от гуглплей](http://www.localytics.com/blog/2012/app-user-loyalty-increasing-ios-beats-android/). Более того, кажется что разрыв не сокращается, а увеличивается, пользователи iOS куда более лояльны к приложениям. По крайней мере на базе статистики 2010-2011 года всё выглядит так. Кстати, а как переводят ретеншн рейт? Коэффициент удержания? #business #mobile
+* [Ретеншн рейт в аппсторе всё еще больше, чем в гуглплей](http://www.localytics.com/blog/2012/app-user-loyalty-increasing-ios-beats-android/). Более того, кажется что разрыв не сокращается, а увеличивается, пользователи iOS куда более лояльны к приложениям. По крайней мере, на базе статистики 2010-2011 года всё выглядит так. Кстати, а как переводят ретеншн рейт? Коэффициент удержания? #business #mobile
 * [Apple выиграла в суде против Samsung Galaxy 10.1](http://allthingsd.com/20120626/apple-wins-injunction-against-samsung-galaxy-tab/). Но это не новость. А новость вот: [Гугл пытается заблокировать продажи iPhone и iPad](http://9to5mac.com/2012/06/25/google-attempts-to-block-u-s-iphone-ipad-shipments-over-3g-patents/) с помощью своих патентов на куски 3G. Кто там говорил что гугл до этого не опустится? Опустится, бизнес есть бизнес! #lawyers #business #google #apple
-* [3d планы лондонских станций метро](http://stations.aeracode.org/). Просто, но очень круто и перспектива видна. Скажите, для московского метро, конечно, ничего такого нет, да? #subway #3d
+* [3d-планы лондонских станций метро](http://stations.aeracode.org/). Просто, но очень круто и перспектива видна. Скажите, для московского метро, конечно, ничего такого нет, да? #subway #3d
 * [Apple таки выпустила отдельное приложение для подкастов](http://itunes.apple.com/us/app/podcasts/id525463029?mt=8). Кто скажет, чем и кому это грозит, с учетом того, что в iOS6 в iTunes по прежнему есть раздел "подкасты"? #podcast #itunes #apple
 * [DropBox закрыл приложению Boxopus доступ к API](http://blog.boxopus.com/index.php/2012/06/25/dropbox-disconnects-us/). Приложение скачивало файлы с торрентов и складывало их человеку в его дропбокс. Причем, очевидно, скачивало и легальные файлы, почему нет. Причина, которую назвал Dropbox: мы не хотим чтобы наши пользователи нарушали копирайты. В общем всё спорно, ребят из Boxopus очень жалко - 3 месяца бурной работы коту под хвост. #torrent #dropbox #copyright
 * Весной Питер Тиль прочитал в Стэнфорде курс лекций про технологическое предпринимательство. А сейчас [выложил их текст в виде набора эссе](http://blakemasters.tumblr.com/peter-thiels-cs183-startup). [via @amogil](http://github.com/amogil)
 
 
 ## На грани
-* [Зарелизился самый лучший кроссплатформенный редактор для всех - SublimeText2](http://www.sublimetext.com/blog/articles/sublime-text-2-0-released). Кажется я и [@umputun](http://twitter.com/umputun) - два самых больших евангелиста этого редактора в России. А я первый покупатель из россии. В общем я очень рад, эта заметка сейчас пишется из Emacs, но я почти переехал в Sublime во всём, кроме org-mode и некоторых других мелочей. #sublime #release #*
+* [Зарелизился самый лучший кроссплатформенный редактор для всех - SublimeText2](http://www.sublimetext.com/blog/articles/sublime-text-2-0-released). Кажется я и [@umputun](http://twitter.com/umputun) - два самых больших евангелиста этого редактора в России. А я - первый покупатель из России. В общем я очень рад, эта заметка сейчас пишется из Emacs, но я почти переехал в Sublime во всём, кроме org-mode и некоторых других мелочей. #sublime #release #*
 * [Простой флоучарт со схемой, как подготовить сайт к приходу устройств с ретина-дисплеем](http://mir.aculo.us/2012/06/26/flowchart-how-to-retinafy-your-website/). Не думал, что такая проблема реально есть. Но действительно, такое увеличение dpi надо использовать во благо. #apple #retina #html
-* [Джеймс Сомерс показал jimboPad](http://jsomers.net/blog/jimbopad), такую штуку, которая показывает процесс редактирования текста во времени. Как таймлайн в EtherPad, всегда можно увидеть в какой момент времени как выглядел текст. Неплохая задумка, мне нравится. Перемотайте ближе к концу заметки - там есть пример. #etherpad #jimbopad #timeline
-* [А вы знали, что GitHub поддерживает SVN?](https://github.com/blog/1178-collaborating-on-github-with-subversion). Я нет. А ведь многим нравится именно svn, почему бы не пользоваться? #github #svn
+* [Джеймс Сомерс показал jimboPad](http://jsomers.net/blog/jimbopad) - такую штуку, которая показывает процесс редактирования текста во времени. Как таймлайн в EtherPad, всегда можно увидеть в какой момент времени как выглядел текст. Неплохая задумка, мне нравится. Перемотайте ближе к концу заметки - там есть пример. #etherpad #jimbopad #timeline
+* [А вы знали, что GitHub поддерживает SVN?](https://github.com/blog/1178-collaborating-on-github-with-subversion). Я -  нет. А ведь многим нравится именно svn, почему бы не пользоваться? #github #svn
 * [AeroFS сделали синхронизацию с вашим S3](http://blog.aerofs.com/aerofss3-syncing-to-amazon-cloud-never-been-e) - фича, которую у них давно просили. По этому поводу я даже снова запустил AeroFS и хочу попробовать с ним опять поработать, может он перестал так глючить ужасно. #aerofs #s3 #dropbox
 
 ## Для гиков
-* [Офигенное развитие идеи gravatar - Avatars.io](http://avatars.io/). Идея сервиса - не надо просить пользователя заливать к вам аватарки. Пользуйтесь его аватарками из gravatar или соц.сетей. Ну или в крайнем случае заливайте к ним, на avatars.io. Пока не понял почему этот сервис не умрет. С другой стороны, gravatars же не умерли. #gravatars #avatar
+* [Офигенное развитие идеи gravatar - Avatars.io](http://avatars.io/). Идея сервиса - не надо просить пользователя заливать к вам аватарки. Пользуйтесь его аватарками из gravatar или соц.сетей. Ну или, в крайнем случае, заливайте к ним, на avatars.io. Пока не понял почему этот сервис не умрёт. С другой стороны, gravatars же не умерли. #gravatars #avatar
 * [Bridge - новый модульный RPC фреймворк](https://www.getbridge.com/) с поддержкой самых разных языков. Примеры на js, python, ruby, java. Выглядит очень интересно, но есть подвох. Бесплатная версия залочена на 40 тыс. сообщений в минуту. Если хочешь больше - плати. #rpc #bridge
-* [Ответ фанатов MySQL на нападки MemSQL](http://dom.as/2012/06/26/memsql-rage/). Даже заголовок отличный - "MySQL в бульбулион раз быстрее чем MemSQL". Что я могу сказать. Ну, делайте скидку на литовца. А вот, что по поводу этой же ссылки написал [@hostmaster](http://github.com/hostmaster): "Известный в MySQL сообществе инженер из facebook Domas Mituzas написал в своем блоге пост о том, что MySQL в стопятсот тысяч раз быстрее чем MemSQL. Вообщем моё кунг-фу сильнее твоего кунг-фу". #mysql #memsql #flame
-* [Аккуратная библиотечка-расширение для jQuery](http://warpech.github.com/jquery-handsontable/index.html) позволяет встраивать таблицы, которые ведут себя как Excel. Т.е. можно менять там данные, он всё это пересчитывает и тп. Формул, правда, пока нет, но их легко писать на javascript. #jquery #excel #javascript #html
-* Аарон Шварц, автор фреймворка web.py (и много чего еще), опубликовал ещё одно руководство по разработке ПО. Все хорошие, по его мнению, идеи он собрал в одном лаконичном документе и назвал его [The Pokayoke Guide to Developing Software](http://pokayokeguide.com/). Pokayoke — это по-японски, что по-нашему будет "fail-safing" или "mistake-proofing". [via @mikola](http://github.com/mikola)
+* [Ответ фанатов MySQL на нападки MemSQL](http://dom.as/2012/06/26/memsql-rage/). Даже заголовок отличный - "MySQL в бульбулион раз быстрее чем MemSQL". Что я могу сказать. Ну, делайте скидку на литовца. А вот, что по поводу этой же ссылки написал [@hostmaster](http://github.com/hostmaster): "Известный в MySQL-сообществе инженер из facebook Domas Mituzas написал в своем блоге пост о том, что MySQL в стопятьсот тысяч раз быстрее чем MemSQL. В общем, моё кунг-фу сильнее твоего кунг-фу". #mysql #memsql #flame
+* [Аккуратная библиотечка-расширение для jQuery](http://warpech.github.com/jquery-handsontable/index.html) позволяет встраивать таблицы, которые ведут себя как Excel. Т.е. можно менять там данные, он всё это пересчитывает и т. п. Формул, правда, пока нет, но их легко писать на javascript. #jquery #excel #javascript #html
+* Аарон Шварц, автор фреймворка web.py (и много чего ещё), опубликовал ещё одно руководство по разработке ПО. Все хорошие, по его мнению, идеи он собрал в одном лаконичном документе и назвал его [The Pokayoke Guide to Developing Software](http://pokayokeguide.com/). Pokayoke — это по-японски, что по-нашему будет "fail-safing" или "mistake-proofing". [via @mikola](http://github.com/mikola)
